--- a/agrobased /pricing.html
+++ b/agrobased /pricing.html
@@ -47,5 +47,42 @@
 <div class="main">
  
 </div>
+<br><br><br>
+<div class="center">
+<form style="text-align: center; font-size: 48px;">  
+  <label> Select Fruit/ Vegetable </label>  
+  <br> <br>
+  <select style="font-size:large;">  
+  <option value = "Tomato"> Tomato  
+  </option>  
+  </select>  
+  </form>  
+  <br><br>
+  <form style="text-align: center; font-size: 48px;"  >  
+    <label> Season </label>  
+    <br> <br>
+    <select style="font-size:large;">  
+    <option value = "Summer"> Summer  
+    </option>  
+    <option value = "Winter"> Winter   
+    </option>  
+    <option value = "Monsoon"> Monsoon
+    </option>  
+    
+   
+    </select>  
+    </form>  
+    <br><br>
+    <form action="/action_page.php" style="text-align: center; font-size: 48px;">
+      <label for="Date">Date</label>
+      <br><br>
+      <input type="integer" id="Date" name="Data" placeholder="enter date">
+      
+    </form>
+    <br><br>
+    <form style="text-align: center;">
+    <button type="button" onclick="alert('Predicted Price')"  style="font-size:45px; background-color:green;">Predict</button>
+    </form>
+  </div>
 </body>
 </html>
